--- a/.gitignore
+++ b/.gitignore
@@ -16,3 +16,29 @@ _site/
 # counterproductive to check this file into the repository.
 # Details at https://github.com/github/pages-gem/issues/768
 Gemfile.lock
+
+# Obsidiosaurus creates JSON files at the root
+allSourceAssetsInfo.json
+allFilesInfo.json
+assetInfo.json
+
+# Dependencies
+*/node_modules
+
+# Production
+*/build
+
+# Generated files
+.docusaurus
+.cache-loader
+
+# Misc
+.DS_Store
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
